# ElecPM_Sim_Mesh

./: README.md
aruco_cube/: CMakeLists.txt  package.xml  setup.cfg  setup.py
aruco_cube/aruco_cube/launch/: display_launch.py
aruco_cube/codes/: update_dae.py
aruco_cube/meshes/: face_1.dae  face_2.dae  face_3.dae  face_4.dae  face_5.dae  face_6.dae
aruco_cube/urdf/: robot.xacro  texture.xacro
test_texture/: CMakeLists.txt  package.xml  setup.cfg  setup.py
test_texture/meshes/: test.dae
test_texture/test_texture/launch/: display_launch.py
test_texture/urdf/: texture.xacro
